--- a/stylesheet.css
+++ b/stylesheet.css
@@ -9,8 +9,10 @@
 	}
 
 #slightly {
-	font-color: #2b2e2e;
-	font-family: Avenir, Helvetica Neue, sans-serif;
+	font-color: #593e54;
+	font-family: ff-dax-compact-web-pro,arial;
+	font-weight: 300;
+	font-size: 72px;
 	}
 		
 img {
