--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,7 @@
 
 #slightly {
 	font-color: #593e54;
-	font-family: ff-dax-compact-web-pro,arial;
+	font-family: Ff-dax-compact-web-pro, Arial;
 	font-weight: 300;
 	font-size: 72px;
 	}
