--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,11 +23,18 @@ img {
 	height: 100px;
 	width: 300px;
 	margin: auto;
-}
+	}
+
+.block {
+	height: 500px;
+	width: 500px;
+	border: dashed;
+	background-color: a6ebe8;
+	}
 
 p {
-
 }
+
 div {
     height: 50px;
     width: 120px;
@@ -57,12 +64,11 @@ a:visited {
 	width: 97.5%;
 	margin-top: -20px;
 	height: 50px;
-	background-color: #668284;
-	margin-bottom: 10px;
+	margin-bottom: 30px;
 }
 
 #footer {
-	position: relative;
+	position: fixed;
 	height: 40px;
 	padding:0px;
 	background-color: #668284;
