--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ img {
 p {
 }
 
-div {
+/*div {
     height: 50px;
     width: 120px;
     border-color: #6495ed;
@@ -44,7 +44,7 @@ div {
     border-width: 2px;
     border-radius:2px;
     position: fixed;
-}
+}*/
 
 
 /* a:link { 
