--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,10 +26,13 @@ img {
 	}
 
 .block {
-	height: 500px;
-	width: 500px;
-	border: dashed;
-	background-color: a6ebe8;
+	position: relative;
+	float: right;
+	margin-top: 50px;
+	width: 88%;
+	height: 400px;
+	background-color: #F4EBC3;
+	margin-bottom: 10px;
 	}
 
 p {
