--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,7 +71,7 @@ a:visited {
 }
 
 #footer {
-	position: fixed;
+	position: relative;
 	height: 40px;
 	padding:0px;
 	background-color: #668284;
@@ -80,6 +80,11 @@ a:visited {
 	font-size: 14px;
 	text-align: center;
 	color: #ffffff;
+}
+
+#footer p {
+	position: relative;
+	padding: 10px;
 }
 
 #email{
