--- a/stylesheet.css
+++ b/stylesheet.css
@@ -77,7 +77,7 @@ a:visited {
 /*	background-color: #668284; */
 	clear: both;
 	font-family: Garamond, serif;
-	font-size: 14px;
+	font-size: 16px;
 	text-align: center;
 	color: #593e54;
 }
@@ -86,9 +86,10 @@ a:visited {
 
 #email{
 	float:right;
-	margin-right: 5px;
+/*	margin-right: 5px; */
 	padding: 10px;
 	position: relative;
+	text-decoration: none;
 }
 
 #name {
