--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,22 @@
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
-
+  <script type="text/javascript" src="http://use.typekit.com/izp2mhh.js"></script>
+  <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+  
+  <script type="text/javascript">
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-31217337-1']);
+    _gaq.push(['_setSiteSpeedSampleRate', 100]);
+    _gaq.push(['_trackPageview']);
+  
+    (function() {
+      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
+  </script>
+  
     </head>
     <body>
 
@@ -23,11 +38,10 @@
 
           {{ content }}
 
-          <div id="footer">
+        </div>
+          <footer class="footer">
 			<p id="name">Caroline Kikisch</p> 
 			<a href="mailto:hush@slightlyopaque.net"> <p id="email">hush@slightlyopaque.net</p></a>
-		  </div>
-        </div>
-
+		  </footer>
     </body>
 </html>
