--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@
   padding: 0;
 }
 
-html, body { height: 100%; }
+html, body { height: 100%}
 
 body {
   background-color: #FFF;
@@ -61,6 +61,7 @@ a:visited { color: #a0a; }
   width: 42em;
   margin: 3em auto 2em;
   line-height: 1.5em;
+  min-height: 800px;
 }
 
 .header a {
@@ -74,8 +75,12 @@ a:visited { color: #a0a; }
 }
 
 .title a {
-  color: #a00;
-}
+	color: #593e54;
+	font-family: Ff-dax-compact-web-pro, Avenir, Arial;
+	font-weight: 300;
+	font-size: 72px;
+	text-decoration: none;
+	}
 
 .title a:hover {
   color: #000;
@@ -94,32 +99,16 @@ a:visited { color: #a0a; }
   color: #aaa;
 }
 
-.footer {
+footer {
   font-size: 80%;
   color: #666;
   border-top: 4px solid #eee;
   margin-top: 2em;
   overflow: hidden;
+  width: 42em;
+  margin: 3em auto 2em;
 }
 
-.footer .contact {
-  float: left;
-  margin-right: 3em;
-}
-
-.footer .contact a {
-  color: #8085C1;
-}
-
-.footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-.footer .rss img {
-  border: 0;
-}
 
 /*****************************************************************************/
 /*
@@ -157,4 +146,19 @@ a:visited { color: #a0a; }
 
 .post pre.terminal code {
   background-color: #333;
+}
+
+
+.half-width {
+	width: 50%;
+}
+
+.left {
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.right {
+	float: right;
+	margin: 0 0px 20px 20px;
 }
