--- a/_layouts/santa-post.html
+++ b/_layouts/santa-post.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
- <a href="/Santa-Stories.html" >Santa Stories</a> 
+ <a href="/Santa.html" >Santa</a> 
  
 <h2>{{ page.title }}</h2>
 <p class="meta">{{ page.date | date_to_string }}</p>
