--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,11 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
 h1 { margin-bottom: 1em; }
+h2 {text-align: center; 
+	font-size: 1.5em; 
+	font-weight: light; 
+	font: Times;
+	margin-top: 1em;}
 p { margin: 1em 0; }
 
 a         { color: #00a; }
