--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,12 +33,17 @@
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-
           </div>
-
           {{ content }}
-
         </div>
+        
+        <div>
+        	<p>
+        Writing. Illustration. Translation. 
+        Quality Assurance. Project Management.
+			</p>
+        </div>
+        
           <footer class="footer">
 			<p id="name">Caroline Kikisch</p> 
 			<a href="mailto:hush@slightlyopaque.net"> <p id="email">hush@slightlyopaque.net</p></a>
