--- a/_layouts/santa.html
+++ b/_layouts/santa.html
@@ -1,10 +1,10 @@
 ---
 layout: all_kinds_of_posts
 ---
-<nav>
-	<a href="/Artikel.html" >Artikel</a>
+ <nav>
+	 <a href="/Santa.html" >Santa</a> 
 </nav>
-
+ 
 <div class="post">
 	<h1>{{ page.title }}</h1>
 	<p class="meta">{{ page.date | date_to_string }}</p>
