added Navigation and Homepage Text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,15 @@
     </head>
     <body>
 
+		<nav>
+			<ul>
+				<li><a href="/">Home</a></li>
+				<li><a href="/about.html">About</a></li>
+				<li><a href="/Articles.html">Articles</a></li>
+				<li><a href="/Santa.html">Santa</a></li>
+			</ul>
+		</nav>
+
         <div class="site">
           <div class="header">
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
