--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: all_kinds_of_posts
 ---
 <nav>
-	<a href="/Artikel.html" >Artikel</a>
+	<a href="/Articles.html" >Articles</a>
 </nav>
 
 <div class="post">
