--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 		<nav>
 			<ul>
 				<li><a href="/">Home</a></li>
-				<li><a href="/about.html">About</a></li>
+				<li><a href="/about.html">About Me</a></li>
 				<li><a href="/Articles.html">Articles</a></li>
 				<li><a href="/Santa.html">Santa</a></li>
 				<li><a href="/contact.html">Contact</a></li>
