--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
 				<li><a href="/About.html">About Me</a></li>
 				<li><a href="/Articles.html">Articles</a></li>
 				<li><a href="/Santa.html">Santa</a></li>
-				<li><a href="/contact.html">Contact</a></li>
+				<li><a href="/Contact.html">Contact</a></li>
 			</ul>
 		</nav>
 
