--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
     </head>
     <body>
 
-		<nav>
+		<nav id="navigation_bar">
 			<ul>
 				<li><a href="/">Home</a></li>
 				<li><a href="/About.html">About Me</a></li>
@@ -49,7 +49,7 @@
         
           <footer class="footer">
 			<p id="name">Caroline Kikisch</p> 
-			<a href="mailto:hush@slightlyopaque.net"> <p id="email">hush@slightlyopaque.net</p></a>
+			<a href="mailto:hush@slightlyopaque.net"> <p id="email">Email me</p></a>
 		  </footer>
     </body>
 </html>
