--- a/css/main.css
+++ b/css/main.css
@@ -30,31 +30,46 @@ h1 { margin-bottom: 1em; }
 	margin-top: 1em;line-height: 1.3;font-weight: 100;font-variant: small-caps;}
 p { margin: 1em 0; }
 
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
+a {  
+	color: #593e54;
+	text-decoration: none;
+	font-family: Avenir;
+	color: #593e54;
+}
 
-nav {
+a:hover   { color: #000; }
+/*a:visited { color: #a0a; }*/
+
+#navigation_bar {
 	float: right;
 	margin-right: 2em;
 	}
 
-nav li
+#navigation_bar li
 {
 display:inline;
 padding: 0 15px 0 0;
 font-family: Avenir; sans-serif;
 }
 
-nav li a { 
+#navigation_bar li a { 
 	color: #593e54;
 	text-decoration:none;
 	font-weight: 500;
 	}
 
-nav li a:hover   { color: #000; }
-nav li a:visited { color: #593e54; }
+#navigation_bar li a:hover   { color: #000; }
 
+#page-navigation a {
+	text-decoration:none;
+	color: #593e54;
+	/* font-size: 1em; */
+	/* font-weight: 100; */
+	font-variant: small-caps; 
+	font-family: Avenir;
+}
+
+#page-navigation a:hover   { color: #000; }
 /*****************************************************************************/
 /*
 /* Home
@@ -205,6 +220,10 @@ footer {
 .right {
 	float: right;
 	margin: 0 0px 20px 20px;
+}
+
+#page-navigation {
+	display: inline-block;
 }
 
 .posts img {
