Footer and links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
         </div>
         
           <footer class="footer">
-			<p id="name">Caroline Kikisch</p> 
+			<id="name">Caroline Kikisch<br> 
 			<a href="mailto:hush@slightlyopaque.net"> <p id="email">Email me</p></a>
 		  </footer>
     </body>
