--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 115%; 
-  font-family: Avenir;
+  font-family: Avenir; sans-serif;
   font-weight: 500;
 }
 
@@ -29,18 +29,27 @@ h1 { margin: 2em 0 1em 0;}
 .post h1 {text-align: center; 
 	font-size: 1.8em; 
 	 
-	font-family: Avenir;
+	font-family: Avenir; sans-serif;
 	margin-top: 1em;line-height: 1.3;font-weight: 100;font-variant: small-caps;}
 p { margin: 1em 0; }
 
 a {  
 	color: #593E54;
-	text-decoration: none;
 	font-family: Avenir; sans-serif;
 }
 
-a:hover   { color: #000; }
+a:hover { 
+	color: red; 
+	text-decoration: none;
+}
 /*a:visited { color: #a0a; }*/
+
+div ul li a {
+	color: #593E54;
+	font-family: Avenir; sans-serif;
+	text-decoration: none;
+}
+
 
 .directory a {
 	float:right;
@@ -78,7 +87,8 @@ font-family: Avenir; sans-serif;
 
 #page-navigation a:hover   { color: #000; }
 
-.footer a { 
+/*.footer a { */
+#email {
 	color: #593e54;
 	text-decoration: underline;
 	font-weight: 500;
@@ -106,7 +116,7 @@ font-family: Avenir; sans-serif;
 
 .posts span {
   color: #aaa;
-  font-family: Avenir;
+  font-family: Avenir; sans-serif;
   font-size: 80%;
   float: right;
   padding: 0;
