--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
         
           <footer class="footer">
 			<id="name">Caroline Kikisch<br> 
-			<a href="mailto:hush@slightlyopaque.net"> <p id="email">Email me</p></a>
+			<a href="mailto:hush@slightlyopaque.net" id="email"> <p>Email me</p></a>
 		  </footer>
     </body>
 </html>
