--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!--{% if site.env == 'production' %}
+	<link rel="stylesheet" href="/build/style.min.css">
+	{% else %}
+	<link rel="stylesheet" href="/debug/style.css">
+	{% endif %}-->
 
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
