--- a/css/main.css
+++ b/css/main.css
@@ -13,19 +13,19 @@
 html, body { height: 100%}
 
 body {
-	max-width:700px;
+	/*max-width:700px;
 	padding:12px 12px 0 12px;
-  background-color: #FFF;
+  */background-color: #FFF;
   font: 13.34px Helvetica, Arial, sans-serif;
   font-size: small;
   text-align: center;
 }
 
-@media only screen and (min-width: 481px) {
+/*@media only screen and (min-width: 481px) {
 	body {
 		padding: 24px 24px 0 24px;
 	}
-}
+}*/
 
 h1, h2, h3, h4, h5, h6 {
   font-size: 115%; 
@@ -42,10 +42,10 @@ h1 { margin: 2em 0 1em 0;}
 p { margin: 1em 0; }
 
 a {  
-	color: #695165;
+	color: #593E54;
 	font-family: Avenir; sans-serif;
-	text-decoration: none; 
-	font-size: 18px;
+/*	text-decoration: none; 
+	font-size: 18px;*/
 }
 
 a:hover { 
@@ -54,6 +54,11 @@ a:hover {
 }
 /*a:visited { color: #a0a; }*/
 
+div ul li a {
+	color: #593E54;
+	font-family: Avenir; sans-serif;
+	text-decoration: none;
+}
 
 .directory a {
 	float:right;
