--- a/_layouts/all_kinds_of_posts.html
+++ b/_layouts/all_kinds_of_posts.html
@@ -4,20 +4,31 @@ layout: default
 
 {{ content }}
 
-<div id="page-navigation"> 
-        <div class="clear">&nbsp;</div> 
-        <div class="left"> 
-        {% if page.previous.url %} 
-                <a href="{{page.previous.url}}" title="Previous Post: 
+
+<div class="pagination"> 
+	<div class="clear">&nbsp;</div>
+    <div class="left"> 
+		{% if page.previous.url %} 
+          <a href="{{page.previous.url}}" title="Previous Post: 
 {{page.previous.title}}">&laquo; {{page.previous.title}}</a> 
         {% endif %} 
-        </div> 
+    </div> 
 
-        <div class="right"> 
-        {% if page.next.url %} 
-                <a href="{{page.next.url}}" title="next Post: 
+    <div class="right"> 
+    	{% if page.next.url %} 
+			<a href="{{page.next.url}}" title="next Post: 
 {{page.next.title}}">{{page.next.title}} &raquo; </a> 
         {% endif %} 
-        </div> 
-        <div class="clear">&nbsp;</div> 
-</div> 
+    </div> 
+	<div class="clear">&nbsp;</div>
+</div>
+
+
+<!--<div class="pagination">
+    <div class="left">
+        <a href="#">Previous</a>
+    </div>
+    <div class="right">
+        <a href="#">Next</a>
+    </div>
+</div>-->
