linked to writing.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
 				<li><a href="/">Home</a></li>
         <li><a href="/About.html">About Me</a></li>
 				<li class="has-dropdown">
-          <a href="/About.html">Writing</a>
+          <a href="/Writing.html">Writing</a>
           <ul>
             <li><a href="/Articles.html">Articles</a></li>
             <li><a href="/Santa.html">Santa</a></li>
