added Hack-Space for Hacker articles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,7 @@
           <ul>
             <li><a href="/Articles.html">Articles</a></li>
             <li><a href="/Santa.html">Santa</a></li>
+            <li><a href="/Hacks.html">Hacks</a></li>
           </ul>
         </li>
 				<li><a href="/Contact.html">Contact</a></li>
