--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,8 +61,13 @@
         </div>
         
           <footer class="footer">
-			<id="name">Caroline Kikisch<br> 
-			<a href="mailto:hush@slightlyopaque.net" id="email"> <p>Email me</p></a>
+			<id="name">Caroline Kikisch<br>
+<script language="JavaScript">
+var username = "hola";
+var hostname = "slightlyopaque.net";
+var linktext = username + "@" + hostname ;
+document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+</script>
 		  </footer>
     </body>
 </html>
