--- a/_layouts/hacks.html
+++ b/_layouts/hacks.html
@@ -7,6 +7,7 @@ layout: all_kinds_of_posts
  
 <div class="post">
 	<h1>{{ page.title }}</h1>
-	<p class="meta">{{ page.date | date_to_string }}</p>
+        <!--<p class="meta">{{ page.date | date_to_string }}</p>--!>
+	<p class="meta">{{ date_to_string }}</p>
 	{{ content }}
 </div>
