changed mail address

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
           <footer class="footer">
 			<id="name">Caroline Kikisch<br>
 <script language="JavaScript">
-var username = "hola";
+var username = "hello";
 var hostname = "slightlyopaque.net";
 var linktext = username + "@" + hostname ;
 document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
