--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,13 @@ body {
 	}
 }*/
 
-h1, h2, h3, h4, h5, h6 {
+h1 {
+  font-size: 150%; 
+  font-family: Helvetica; sans-serif;
+  font-weight: 500;
+}
+
+h2, h3, h4, h5, h6 {
   font-size: 115%; 
   font-family: Helvetica; sans-serif;
   font-weight: 500;
