--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
+        <meta name="keywords" content="Systemische Beratung, Coaching, Supervision, Systemisches, Organisationsentwicklung, Retrospektiven, Agile, Teams, Teambuilding, Lego Serious Play, Hamburg">
+        <meta name="description" content="Menschen sind soziale Wesen, die in ständigen Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
+
+    <meta property="og:title" content="Coaching Beratung" >
+    <meta property="og:site_name" content="Coaching Beratung" >
+    <meta property="og:description" content="Menschen sind soziale Wesen, die in ständigen Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
+	<meta property="og:url" content="http://slightlyopaque.net/" >
+        <meta property="og:image" content="???">
+
       <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
 <!--{% if site.env == 'production' %}
@@ -36,26 +45,19 @@
   
     </head>
     <body>
-
-		<nav id="navigation_bar">
-			<ul>
-				<li><a href="/">Home</a></li>
-        <li><a href="/About.html">About Me</a></li>
-				<li class="has-dropdown">
-          <a href="/Writing.html">Writing</a>
-          <ul>
-            <li><a href="/Articles.html">Articles</a></li>
-            <li><a href="/Santa.html">Santa</a></li>
-            <li><a href="/Hacks.html">Hacks</a></li>
-          </ul>
-        </li>
-				<li><a href="/Contact.html">Contact</a></li>
-			</ul>
-		</nav>
+        <nav id="navigation_bar">
+            <ul>
+                <li><a href="/">Home</a></li>
+                    <li class="has-dropdown">
+                </li>
+                <li><a href="/Coaching.html">Coaching</a></li>
+	        <li><a href="/Contact.html">Kontakt</a></li>
+	   </ul>
+	</nav>
 
         <div class="site">
           <div class="header">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+            <h1 class="title"><a href="/">{{ page.title }}</a></h1>
           </div>
           {{ content }}
         </div>
@@ -63,7 +65,7 @@
           <footer class="footer">
 			<id="name">Caroline Kikisch<br>
 <script language="JavaScript">
-var username = "hello";
+var username = "beratung";
 var hostname = "slightlyopaque.net";
 var linktext = username + "@" + hostname ;
 document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
