changes in layout and meta stuff

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,14 +5,14 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-        <meta name="keywords" content="Systemische Beratung, Coaching, Supervision, Systemisches, Organisationsentwicklung, Retrospektiven, Agile, Teams, Teambuilding, Lego Serious Play, Hamburg">
-        <meta name="description" content="Menschen sind soziale Wesen, die in ständigen Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
+        <meta name="keywords" content="Systemische Beratung, Coaching, Supervision, Systemisches, Organisationsentwicklung, Retrospektiven, Agile, Teams, Teambuilding, Lego Serious Play, Hamburg, Mediation, Konfliktberatung, Veränderung">
+        <meta name="description" content="Menschen sind soziale Wesen, die in ständigem Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
 
-    <meta property="og:title" content="Coaching Beratung" >
-    <meta property="og:site_name" content="Coaching Beratung" >
-    <meta property="og:description" content="Menschen sind soziale Wesen, die in ständigen Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
+    <meta property="og:title" content="Coaching Beratung Hamburg" >
+    <meta property="og:site_name" content="http://www.slightlyopaque.net" >
+    <meta property="og:description" content="Menschen sind soziale Wesen, die in ständigem Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
 	<meta property="og:url" content="http://slightlyopaque.net/" >
-        <meta property="og:image" content="???">
+        <meta property="og:image" content="http://www.slightlyopaque.net/images/me_profile_IMG_20170216_PB.jpg">
 
       <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
