--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <meta property="og:site_name" content="http://www.slightlyopaque.net" >
     <meta property="og:description" content="Menschen sind soziale Wesen, die in ständigem Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
 	<meta property="og:url" content="http://slightlyopaque.net/" >
-        <meta property="og:image" content="http://www.slightlyopaque.net/images/me_profile_IMG_20170216_PB.jpg">
+        <meta property="og:image" content="http://www.slightlyopaque.net/images/profile.JPG">
 
       <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
