--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,20 +30,6 @@
   <script type="text/javascript" src="http://use.typekit.com/izp2mhh.js"></script>
   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
-<!--
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-31217337-1']);
-    _gaq.push(['_setSiteSpeedSampleRate', 100]);
-    _gaq.push(['_trackPageview']);
-  
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
-  --!>
     </head>
     <body>
         <nav id="navigation_bar">
@@ -52,7 +38,8 @@
                     <li class="has-dropdown">
                 </li>
                 <li><a href="/Coaching.html">Coaching</a></li>
-	        <li><a href="/Contact.html">Kontakt</a></li>
+	        <li><a href="/Datenschutz.html">Datenschutz</a></li>
+	        <li><a href="/Contact.html">Kontakt und Impressum</a></li>
 	   </ul>
 	</nav>
 
