--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,10 +9,10 @@
         <meta name="description" content="Menschen sind soziale Wesen, die in ständigem Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
 
     <meta property="og:title" content="Coaching Beratung Hamburg" >
-    <meta property="og:site_name" content="http://www.slightlyopaque.net" >
+    <meta property="og:site_name" content="http://www.caroline-kikisch.de" >
     <meta property="og:description" content="Menschen sind soziale Wesen, die in ständigem Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
-	<meta property="og:url" content="http://slightlyopaque.net/" >
-        <meta property="og:image" content="http://www.slightlyopaque.net/images/profile.JPG">
+	<meta property="og:url" content="http://caroline-kikisch.de/" >
+        <meta property="og:image" content="http://www.caroline-kikisch.de/images/profile.JPG">
 
       <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
 
@@ -54,7 +54,7 @@
 			<id="name">Caroline Kikisch<br>
 <script language="JavaScript">
 var username = "beratung";
-var hostname = "slightlyopaque.net";
+var hostname = "caroline-kikisch.de";
 var linktext = username + "@" + hostname ;
 document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
 </script>
