--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,9 +45,7 @@
 
         <div class="site">
           <div class="header">
-              <h1 class="title">{{ page.title }}</h1>
-<!--            <h1 class="title"><a href="/">{{ page.title }}</a></h1>
--->
+         <h1 class="title"><a href="">{{ page.title }}</a></h1>
           </div>
           {{ content }}
         </div>
