--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         <meta name="keywords" content="Systemische Beratung, Coaching, Supervision, Systemisches, Organisationsentwicklung, Retrospektiven, Agile, Teams, Teambuilding, Lego Serious Play, Hamburg, Mediation, Konfliktberatung, Veränderung">
         <meta name="description" content="Menschen sind soziale Wesen, die in ständigem Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
 
-    <meta property="og:title" content="Coaching Beratung Hamburg" >
+    <meta property="og:title" content="Coaching Beratung Mediation Hamburg" >
     <meta property="og:site_name" content="http://www.caroline-kikisch.de" >
     <meta property="og:description" content="Menschen sind soziale Wesen, die in ständigem Austausch und Wechselwirkungen mit ihrer Umwelt stehen. Dementsprechend erfordert unser Denken und Handeln Achtsamkeit und Sensibilität für die Auswirkungen auf die uns umgebenden Systeme und Strukturen.">
 	<meta property="og:url" content="http://caroline-kikisch.de/" >
@@ -38,6 +38,7 @@
                     <li class="has-dropdown">
                 </li>
                 <li><a href="/Coaching.html">Coaching</a></li>
+                <li><a href="/Bio.html">Bio</a></li>
 	        <li><a href="/Datenschutz.html">Datenschutz</a></li>
 	        <li><a href="/Contact.html">Kontakt und Impressum</a></li>
 	   </ul>
